fixed warnings when compiling with jdk11